<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Restaurante.CompanyInfo"
    android:background="@drawable/gradient">

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="229dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button_login"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/guardar_cambios"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/title"
        android:layout_width="336dp"
        android:layout_height="119dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="2"
        android:text="@string/actualizar_informaci_n"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <ImageButton
        android:id="@+id/userImage"
        android:layout_width="168dp"
        android:layout_height="167dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/foto_del_usuario"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        app:srcCompat="@drawable/userimage" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="331dp"
        android:layout_height="315dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImage">

        <EditText
            android:id="@+id/username"
            android:layout_width="330dp"
            android:layout_height="68dp"
            android:drawableStart="@drawable/user"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/usuario"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="330dp"
            android:layout_height="68dp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/contrase_a"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/direccion"
            android:layout_width="330dp"
            android:layout_height="68dp"
            android:drawableStart="@drawable/location"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="Direccion"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/email"
            android:layout_width="330dp"
            android:layout_height="68dp"
            android:drawableStart="@drawable/email"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="144dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#F19595"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="Logout"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/saveChanges"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>