<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".PrincipalUser">

    <TextView
        android:id="@+id/title"
        android:layout_width="348dp"
        android:layout_height="72dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="2"
        android:text="@string/feed2budget"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <Button
        android:id="@+id/navBar"
        android:layout_width="471dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/navbar"
        android:text=""
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/usuario"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/usuario"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/default_username"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/navBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524" />

    <Button
        android:id="@+id/semanal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="216dp"
        android:backgroundTint="@color/navbar"
        android:text=""
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restaurantes"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/navbar"
        android:text=""
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mapa"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="@color/navbar"
        android:text=""
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/presupuesto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="@color/navbar"
        android:text=""
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/calendarIcon"
        android:layout_width="83dp"
        android:layout_height="81dp"
        android:contentDescription="@string/calendario"
        android:src="@drawable/calendario"
        app:layout_constraintBottom_toBottomOf="@+id/semanal"
        app:layout_constraintEnd_toEndOf="@+id/semanal"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="@+id/semanal"
        app:layout_constraintTop_toTopOf="@+id/semanal"
        app:layout_constraintVertical_bias="0.115" />

    <ImageView
        android:id="@+id/mapIcon"
        android:layout_width="83dp"
        android:layout_height="81dp"
        android:contentDescription="@string/mapa"
        android:src="@drawable/mapa"
        app:layout_constraintBottom_toBottomOf="@+id/mapa"
        app:layout_constraintEnd_toEndOf="@+id/mapa"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="@+id/mapa"
        app:layout_constraintTop_toTopOf="@+id/mapa"
        app:layout_constraintVertical_bias="0.115" />

    <ImageView
        android:id="@+id/budgetIcon"
        android:layout_width="83dp"
        android:layout_height="81dp"
        android:contentDescription="@string/presupuesto"
        android:src="@drawable/dinero"
        app:layout_constraintBottom_toBottomOf="@+id/presupuesto"
        app:layout_constraintEnd_toEndOf="@+id/presupuesto"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/presupuesto"
        app:layout_constraintTop_toTopOf="@+id/presupuesto"
        app:layout_constraintVertical_bias="0.115" />

    <ImageView
        android:id="@+id/restaurantIcon"
        android:layout_width="83dp"
        android:layout_height="81dp"
        android:contentDescription="@string/restaurantes"
        android:src="@drawable/restaurante"
        app:layout_constraintBottom_toBottomOf="@+id/restaurantes"
        app:layout_constraintEnd_toEndOf="@+id/restaurantes"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/restaurantes"
        app:layout_constraintTop_toTopOf="@+id/restaurantes"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/planText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/plan_semanal"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/semanal"
        app:layout_constraintEnd_toEndOf="@+id/semanal"
        app:layout_constraintStart_toStartOf="@+id/semanal"
        app:layout_constraintTop_toTopOf="@+id/semanal"
        app:layout_constraintVertical_bias="0.768" />

    <TextView
        android:id="@+id/mapText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/mapa"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/mapa"
        app:layout_constraintEnd_toEndOf="@+id/mapa"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/mapa"
        app:layout_constraintTop_toTopOf="@+id/mapa"
        app:layout_constraintVertical_bias="0.801" />

    <TextView
        android:id="@+id/budgetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/presupuesto"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/presupuesto"
        app:layout_constraintEnd_toEndOf="@+id/presupuesto"
        app:layout_constraintStart_toStartOf="@+id/presupuesto"
        app:layout_constraintTop_toTopOf="@+id/presupuesto"
        app:layout_constraintVertical_bias="0.801" />

    <TextView
        android:id="@+id/restaurantText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/restaurantes"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/restaurantes"
        app:layout_constraintEnd_toEndOf="@+id/restaurantes"
        app:layout_constraintStart_toStartOf="@+id/restaurantes"
        app:layout_constraintTop_toTopOf="@+id/restaurantes"
        app:layout_constraintVertical_bias="0.768" />
</androidx.constraintlayout.widget.ConstraintLayout>