<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/gradient"
    >

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/button_login"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/iniciar_sesi_n"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <TextView
        android:id="@+id/title"
        android:layout_width="348dp"
        android:layout_height="72dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="2"
        android:text="@string/iniciar_sesi_n"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="168dp"
        android:layout_height="167dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/userText"
        android:layout_width="330dp"
        android:layout_height="68dp"
        android:drawableStart="@drawable/user"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/usuario"
        android:inputType="text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="330dp"
        android:layout_height="68dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:fontFamily="@font/open_sans_extrabold"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />
</androidx.constraintlayout.widget.ConstraintLayout>