<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cliente.UserRegister"
    android:background="@drawable/gradient">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/button_login"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/registrarse"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.352" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/button_login"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="Tomar foto"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="348dp"
        android:layout_height="72dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="2"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="333dp"
        android:layout_height="315dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto">

        <EditText
            android:id="@+id/userText"
            android:layout_width="330dp"
            android:layout_height="68dp"
            android:autofillHints=""
            android:drawableStart="@drawable/user"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/usuario"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="330dp"
            android:layout_height="68dp"
            android:autofillHints=""
            android:drawableStart="@drawable/email"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="330dp"
            android:layout_height="68dp"
            android:autofillHints=""
            android:drawableStart="@drawable/password"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/contrase_a"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextFields" />



        <EditText
            android:id="@+id/etPresupuesto"
            android:layout_width="330dp"
            android:layout_height="68dp"
            android:autofillHints=""
            android:inputType="numberDecimal"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="Presupuesto Semanal"
            android:numeric="integer|decimal"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/open_sans_extrabold"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="30sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/userImage"
        android:layout_width="168dp"
        android:layout_height="167dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/foto_del_usuario"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189"
        app:srcCompat="@drawable/userimage" />


</androidx.constraintlayout.widget.ConstraintLayout>